Fixed the build for JDK 16 and newer